--- a/css/style.css
+++ b/css/style.css
@@ -632,13 +632,13 @@ input:required {
     -webkit-transition-duration: 500ms;
     -o-transition-duration: 500ms;
     transition-duration: 500ms;
-    background: #181818e3;
+    background: #ffffffe5;
     box-shadow: 0 4px 30px #0000001a;
     backdrop-filter: blur(5px);
 }
 
 .classy-nav-container {
-    background-color: transparent;
+    background: #ffffffd6;
     padding: 0;
 }
 
@@ -676,16 +676,16 @@ input:required {
 .classy-nav-container .classy-navbar .classynav ul li a {
     font-size: 16px;
     text-transform: capitalize;
-    color: #fff;
+    color: #000;
     font-weight: 500;
     padding: 0 20px;
     cursor: pointer;
 }
 
-.main-header-area.sticky .classynav ul li a {
+/* .main-header-area.sticky .classynav ul li a {
     color: #000;
     transition: color 0.3s ease;
-}
+} */
 
 .classy-nav-container .classy-navbar .classynav ul li a:hover,
 .classy-nav-container .classy-navbar .classynav ul li a:focus {
@@ -2369,7 +2369,7 @@ h2.page-title {
 }
 
 .wbnrfz_details {
-    background: #181818ec;
+    background: #ffffffea;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(5px);
     margin-top: -3.6em;
